# wake-on-lan

./: Cargo.toml  README.md
.github/workflows/: codeberg-mirror.yml  rust.yml
src/: main.rs
