[package]
name = "wake-on-lan"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wol"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

[dependencies]
pnet = "0.33.0"
clap = { version = "4.3", features = [ "cargo", "derive" ] }
arrayvec = "0.7.4"